2000-06-19  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* unpost: additions to Completion/Commands/.distfiles and
	.distfiles.

	* users/3189: Functions/Misc/zmv:  use depth-first ordering with
	**/; ignore files whose names are unchanged by the substitution.

2000-06-19  Sven Wischnowsky  <wischnow@zsh.org>

	* 11971: Completion/Core/_path_files, Doc/Zsh/compsys.yo,
 	Src/Zle/compcore.c, Src/Zle/computil.c: improve filename
 	completion; use accept-exact for in-path completion; new fake style
	
	* users/3188: Completion/Core/_description, Completion/Core/_setup,
 	Doc/Zsh/compsys.yo: restore ZLS_COLORS when possible; better
 	group-name handling in ZLS_COLORS
	
2000-06-17  Clint Adams  <schizo@debian.org>

	* 11966: Completion/Core/_main_complete: use double brackets
	around comparison to prevent 'command not found: no' error.

2000-06-17  Bart Schaefer  <schaefer@zsh.org>

	* 11961: Src/subst.c: 11959 was really a bug in magicequalsubst,
	it shouldn't have treated x:=y as a reason to expand =y.

2000-06-17  Tanaka Akira  <akr@zsh.org>

	* 11959: Completion/User/_urls: make it magicequalsubst aware.

	* 11958: Completion/User/_java: new completion for Java.

2000-06-17  Bart Schaefer  <schaefer@zsh.org>

	* 11956: Src/loop.c: Fix off-by-one error in wordcode pc executing
	case statement fall-through.

	* unposted: Test/01grammar.ztst: Add a test for 11956.

2000-06-16  Clint Adams  <schizo@debian.org>

	* 11951: Completion/Debian/_dpkg: replaced _arguments -A
	for install and record-avail  with an evaluation kludge.

2000-06-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 11939: Src/Zle/compmatch.c, Src/Zle/compresult.c,
	Src/Zle/zle_tricky.c: allow completion after `a{{b,c},'; fix for
	closing brace re-insertion when completing from both ends
	(CLF_MID)
	
	* 11938: Completion/Core/_description, Doc/Zsh/compsys.yo: enhance
 	ignore-line to ignore all/current/other word(s)
	
	* 11937: Completion/Core/_expand, Completion/Core/_list,